ProyectoCompi/generated/MonkeyParser.py
# Generated from C:/Users/Usuario7/PycharmProjects/ProyectoCompi\MonkeyParser.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MonkeyParser ( Parser ):

    grammarFileName = "MonkeyParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'*'", "'/'", "'+'", "'-'", "'='", "'!='", 
                     "'>'", "'<'", "':'", "';'", "'('", "')'", "'>='", "'<='", 
                     "'=='", "'['", "']'", "','", "'{'", "'}'", "'let'", 
                     "'true'", "'false'", "'if'", "'else'", "'return'", 
                     "'len'", "'first'", "'last'", "'rest'", "'push'", "'fn'", 
                     "'puts'" ]

    symbolicNames = [ "<INVALID>", "MULT", "DIV", "ADD", "SUB", "EQUALS", 
                      "NOTEQUALS", "GREATERTHAN", "LOWERTHAN", "COLON", 
                      "SEMICOLON", "POPEN", "PCLOSE", "GTE", "LTE", "EQUALE", 
                      "BRACKETSOP", "BRACKETSCL", "COMMA", "CURLYOP", "CURLYCL", 
                      "LET", "TRUE", "FALSE", "IF", "ELSE", "RETURN", "LEN", 
                      "FIRST", "LAST", "REST", "PUSH", "FN", "PUTS", "ID", 
                      "INT", "STRING", "WS", "LINE_COMMENT", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_letStatement = 2
    RULE_returnStatement = 3
    RULE_expressionStatement = 4
    RULE_expression = 5
    RULE_comparison = 6
    RULE_additionExpression = 7
    RULE_additionFactor = 8
    RULE_multiplicationExpression = 9
    RULE_multiplicationFactor = 10
    RULE_elementExpression = 11
    RULE_elementAccess = 12
    RULE_callExpression = 13
    RULE_primitiveExpression = 14
    RULE_arrayFunctions = 15
    RULE_arrayLiteral = 16
    RULE_functionLiteral = 17
    RULE_functionParameters = 18
    RULE_moreIdentifiers = 19
    RULE_hashLiteral = 20
    RULE_hashContent = 21
    RULE_moreHashContent = 22
    RULE_expressionList = 23
    RULE_moreExpressions = 24
    RULE_printExpression = 25
    RULE_ifExpression = 26
    RULE_blockStatement = 27

    ruleNames =  [ "program", "statement", "letStatement", "returnStatement", 
                   "expressionStatement", "expression", "comparison", "additionExpression", 
                   "additionFactor", "multiplicationExpression", "multiplicationFactor", 
                   "elementExpression", "elementAccess", "callExpression", 
                   "primitiveExpression", "arrayFunctions", "arrayLiteral", 
                   "functionLiteral", "functionParameters", "moreIdentifiers", 
                   "hashLiteral", "hashContent", "moreHashContent", "expressionList", 
                   "moreExpressions", "printExpression", "ifExpression", 
                   "blockStatement" ]

    EOF = Token.EOF
    MULT=1
    DIV=2
    ADD=3
    SUB=4
    EQUALS=5
    NOTEQUALS=6
    GREATERTHAN=7
    LOWERTHAN=8
    COLON=9
    SEMICOLON=10
    POPEN=11
    PCLOSE=12
    GTE=13
    LTE=14
    EQUALE=15
    BRACKETSOP=16
    BRACKETSCL=17
    COMMA=18
    CURLYOP=19
    CURLYCL=20
    LET=21
    TRUE=22
    FALSE=23
    IF=24
    ELSE=25
    RETURN=26
    LEN=27
    FIRST=28
    LAST=29
    REST=30
    PUSH=31
    FN=32
    PUTS=33
    ID=34
    INT=35
    STRING=36
    WS=37
    LINE_COMMENT=38
    COMMENT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MonkeyParser.RULE_program

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProgramASTContext(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MonkeyParser.ProgramContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MonkeyParser.StatementContext)
            else:
                return self.getTypedRuleContext(MonkeyParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramAST" ):
                listener.enterProgramAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramAST" ):
                listener.exitProgramAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramAST" ):
                return visitor.visitProgramAST(self)
            else:
                return visitor.visitChildren(self)



    def program(self):

        localctx = MonkeyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            localctx = MonkeyParser.ProgramASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MonkeyParser.POPEN) | (1 << MonkeyParser.BRACKETSOP) | (1 << MonkeyParser.CURLYOP) | (1 << MonkeyParser.LET) | (1 << MonkeyParser.TRUE) | (1 << MonkeyParser.FALSE) | (1 << MonkeyParser.IF) | (1 << MonkeyParser.RETURN) | (1 << MonkeyParser.LEN) | (1 << MonkeyParser.FIRST) | (1 << MonkeyParser.LAST) | (1 << MonkeyParser.REST) | (1 << MonkeyParser.PUSH) | (1 << MonkeyParser.FN) | (1 << MonkeyParser.PUTS) | (1 << MonkeyParser.ID) | (1 << MonkeyParser.INT) | (1 << MonkeyParser.STRING))) != 0):
                self.state = 56
                self.statement()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MonkeyParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprsStatStatASTContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MonkeyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expressionStatement(self):
            return self.getTypedRuleContext(MonkeyParser.ExpressionStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprsStatStatAST" ):
                listener.enterExprsStatStatAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprsStatStatAST" ):
                listener.exitExprsStatStatAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprsStatStatAST" ):
                return visitor.visitExprsStatStatAST(self)
            else:
                return visitor.visitChildren(self)


    class LetStatASTContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MonkeyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LET(self):
            return self.getToken(MonkeyParser.LET, 0)
        def letStatement(self):
            return self.getTypedRuleContext(MonkeyParser.LetStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetStatAST" ):
                listener.enterLetStatAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetStatAST" ):
                listener.exitLetStatAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetStatAST" ):
                return visitor.visitLetStatAST(self)
            else:
                return visitor.visitChildren(self)


    class RtrnStatASTContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MonkeyParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(MonkeyParser.RETURN, 0)
        def returnStatement(self):
            return self.getTypedRuleContext(MonkeyParser.ReturnStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRtrnStatAST" ):
                listener.enterRtrnStatAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRtrnStatAST" ):
                listener.exitRtrnStatAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRtrnStatAST" ):
                return visitor.visitRtrnStatAST(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = MonkeyParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MonkeyParser.LET]:
                localctx = MonkeyParser.LetStatASTContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(MonkeyParser.LET)
                self.state = 63
                self.letStatement()
                pass
            elif token in [MonkeyParser.RETURN]:
                localctx = MonkeyParser.RtrnStatASTContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.match(MonkeyParser.RETURN)
                self.state = 65
                self.returnStatement()
                pass
            elif token in [MonkeyParser.POPEN, MonkeyParser.BRACKETSOP, MonkeyParser.CURLYOP, MonkeyParser.TRUE, MonkeyParser.FALSE, MonkeyParser.IF, MonkeyParser.LEN, MonkeyParser.FIRST, MonkeyParser.LAST, MonkeyParser.REST, MonkeyParser.PUSH, MonkeyParser.FN, MonkeyParser.PUTS, MonkeyParser.ID, MonkeyParser.INT, MonkeyParser.STRING]:
                localctx = MonkeyParser.ExprsStatStatASTContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.expressionStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MonkeyParser.RULE_letStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IdEqLetStatASTContext(LetStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MonkeyParser.LetStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(MonkeyParser.ID, 0)
        def EQUALS(self):
            return self.getToken(MonkeyParser.EQUALS, 0)
        def expression(self):
            return self.getTypedRuleContext(MonkeyParser.ExpressionContext,0)

        def SEMICOLON(self):
            return self.getToken(MonkeyParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdEqLetStatAST" ):
                listener.enterIdEqLetStatAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdEqLetStatAST" ):
                listener.exitIdEqLetStatAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdEqLetStatAST" ):
                return visitor.visitIdEqLetStatAST(self)
            else:
                return visitor.visitChildren(self)



    def letStatement(self):

        localctx = MonkeyParser.LetStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_letStatement)
        try:
            localctx = MonkeyParser.IdEqLetStatASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(MonkeyParser.ID)
            self.state = 70
            self.match(MonkeyParser.EQUALS)
            self.state = 71
            self.expression()
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MonkeyParser.SEMICOLON]:
                self.state = 72
                self.match(MonkeyParser.SEMICOLON)
                pass
            elif token in [MonkeyParser.EOF, MonkeyParser.POPEN, MonkeyParser.BRACKETSOP, MonkeyParser.CURLYOP, MonkeyParser.CURLYCL, MonkeyParser.LET, MonkeyParser.TRUE, MonkeyParser.FALSE, MonkeyParser.IF, MonkeyParser.RETURN, MonkeyParser.LEN, MonkeyParser.FIRST, MonkeyParser.LAST, MonkeyParser.REST, MonkeyParser.PUSH, MonkeyParser.FN, MonkeyParser.PUTS, MonkeyParser.ID, MonkeyParser.INT, MonkeyParser.STRING]:
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MonkeyParser.RULE_returnStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprsRtrnStatASTContext(ReturnStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MonkeyParser.ReturnStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MonkeyParser.ExpressionContext,0)

        def SEMICOLON(self):
            return self.getToken(MonkeyParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprsRtrnStatAST" ):
                listener.enterExprsRtrnStatAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprsRtrnStatAST" ):
                listener.exitExprsRtrnStatAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprsRtrnStatAST" ):
                return visitor.visitExprsRtrnStatAST(self)
            else:
                return visitor.visitChildren(self)



    def returnStatement(self):

        localctx = MonkeyParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_returnStatement)
        try:
            localctx = MonkeyParser.ExprsRtrnStatASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.expression()
            self.state = 79
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MonkeyParser.SEMICOLON]:
                self.state = 77
                self.match(MonkeyParser.SEMICOLON)
                pass
            elif token in [MonkeyParser.EOF, MonkeyParser.POPEN, MonkeyParser.BRACKETSOP, MonkeyParser.CURLYOP, MonkeyParser.CURLYCL, MonkeyParser.LET, MonkeyParser.TRUE, MonkeyParser.FALSE, MonkeyParser.IF, MonkeyParser.RETURN, MonkeyParser.LEN, MonkeyParser.FIRST, MonkeyParser.LAST, MonkeyParser.REST, MonkeyParser.PUSH, MonkeyParser.FN, MonkeyParser.PUTS, MonkeyParser.ID, MonkeyParser.INT, MonkeyParser.STRING]:
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MonkeyParser.RULE_expressionStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprsExprsStatASTContext(ExpressionStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MonkeyParser.ExpressionStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MonkeyParser.ExpressionContext,0)

        def SEMICOLON(self):
            return self.getToken(MonkeyParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprsExprsStatAST" ):
                listener.enterExprsExprsStatAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprsExprsStatAST" ):
                listener.exitExprsExprsStatAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprsExprsStatAST" ):
                return visitor.visitExprsExprsStatAST(self)
            else:
                return visitor.visitChildren(self)



    def expressionStatement(self):

        localctx = MonkeyParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expressionStatement)
        try:
            localctx = MonkeyParser.ExprsExprsStatASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.expression()
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MonkeyParser.SEMICOLON]:
                self.state = 82
                self.match(MonkeyParser.SEMICOLON)
                pass
            elif token in [MonkeyParser.EOF, MonkeyParser.POPEN, MonkeyParser.BRACKETSOP, MonkeyParser.CURLYOP, MonkeyParser.CURLYCL, MonkeyParser.LET, MonkeyParser.TRUE, MonkeyParser.FALSE, MonkeyParser.IF, MonkeyParser.RETURN, MonkeyParser.LEN, MonkeyParser.FIRST, MonkeyParser.LAST, MonkeyParser.REST, MonkeyParser.PUSH, MonkeyParser.FN, MonkeyParser.PUTS, MonkeyParser.ID, MonkeyParser.INT, MonkeyParser.STRING]:
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MonkeyParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AddExprsExprsASTContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MonkeyParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def additionExpression(self):
            return self.getTypedRuleContext(MonkeyParser.AdditionExpressionContext,0)

        def comparison(self):
            return self.getTypedRuleContext(MonkeyParser.ComparisonContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddExprsExprsAST" ):
                listener.enterAddExprsExprsAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddExprsExprsAST" ):
                listener.exitAddExprsExprsAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddExprsExprsAST" ):
                return visitor.visitAddExprsExprsAST(self)
            else:
                return visitor.visitChildren(self)



    def expression(self):

        localctx = MonkeyParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expression)
        try:
            localctx = MonkeyParser.AddExprsExprsASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.additionExpression()
            self.state = 87
            self.comparison()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MonkeyParser.RULE_comparison

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EqlsComparsASTContext(ComparisonContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MonkeyParser.ComparisonContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def additionExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MonkeyParser.AdditionExpressionContext)
            else:
                return self.getTypedRuleContext(MonkeyParser.AdditionExpressionContext,i)

        def GREATERTHAN(self, i:int=None):
            if i is None:
                return self.getTokens(MonkeyParser.GREATERTHAN)
            else:
                return self.getToken(MonkeyParser.GREATERTHAN, i)
        def LOWERTHAN(self, i:int=None):
            if i is None:
                return self.getTokens(MonkeyParser.LOWERTHAN)
            else:
                return self.getToken(MonkeyParser.LOWERTHAN, i)
        def LTE(self, i:int=None):
            if i is None:
                return self.getTokens(MonkeyParser.LTE)
            else:
                return self.getToken(MonkeyParser.LTE, i)
        def GTE(self, i:int=None):
            if i is None:
                return self.getTokens(MonkeyParser.GTE)
            else:
                return self.getToken(MonkeyParser.GTE, i)
        def EQUALE(self, i:int=None):
            if i is None:
                return self.getTokens(MonkeyParser.EQUALE)
            else:
                return self.getToken(MonkeyParser.EQUALE, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqlsComparsAST" ):
                listener.enterEqlsComparsAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqlsComparsAST" ):
                listener.exitEqlsComparsAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqlsComparsAST" ):
                return visitor.visitEqlsComparsAST(self)
            else:
                return visitor.visitChildren(self)



    def comparison(self):

        localctx = MonkeyParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_comparison)
        self._la = 0 # Token type
        try:
            localctx = MonkeyParser.EqlsComparsASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 89
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MonkeyParser.GREATERTHAN) | (1 << MonkeyParser.LOWERTHAN) | (1 << MonkeyParser.GTE) | (1 << MonkeyParser.LTE) | (1 << MonkeyParser.EQUALE))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 90
                    self.additionExpression() 
                self.state = 95
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdditionExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MonkeyParser.RULE_additionExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MultAddExprsASTContext(AdditionExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MonkeyParser.AdditionExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def multiplicationExpression(self):
            return self.getTypedRuleContext(MonkeyParser.MultiplicationExpressionContext,0)

        def additionFactor(self):
            return self.getTypedRuleContext(MonkeyParser.AdditionFactorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultAddExprsAST" ):
                listener.enterMultAddExprsAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultAddExprsAST" ):
                listener.exitMultAddExprsAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultAddExprsAST" ):
                return visitor.visitMultAddExprsAST(self)
            else:
                return visitor.visitChildren(self)



    def additionExpression(self):

        localctx = MonkeyParser.AdditionExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_additionExpression)
        try:
            localctx = MonkeyParser.MultAddExprsASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.multiplicationExpression()
            self.state = 97
            self.additionFactor()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdditionFactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MonkeyParser.RULE_additionFactor

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MultAddFctrASTContext(AdditionFactorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MonkeyParser.AdditionFactorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def multiplicationExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MonkeyParser.MultiplicationExpressionContext)
            else:
                return self.getTypedRuleContext(MonkeyParser.MultiplicationExpressionContext,i)

        def ADD(self, i:int=None):
            if i is None:
                return self.getTokens(MonkeyParser.ADD)
            else:
                return self.getToken(MonkeyParser.ADD, i)
        def SUB(self, i:int=None):
            if i is None:
                return self.getTokens(MonkeyParser.SUB)
            else:
                return self.getToken(MonkeyParser.SUB, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultAddFctrAST" ):
                listener.enterMultAddFctrAST(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultAddFctrAST" ):
                listener.exitMultAddFctrAST(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultAddFctrAST" ):
                return visitor.visitMultAddFctrAST(self)
            else:
                return visitor.visitChildren(self)



    def additionFactor(self):

        localctx = MonkeyParser.AdditionFactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_additionFactor)
        self._la = 0 # Token type
        try:
            localctx = MonkeyParser.MultAddFctrASTContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 99
                    _la = self._input.LA(1)
                    if not(_la==MonkeyParser.ADD or _la==MonkeyParser.SUB):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 100
                    self.multiplicationExpression() 
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplicationExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MonkeyParser.RULE_multiplicationExpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ElmtMultExprsASTContext(MultiplicationExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MonkeyParser.MultiplicationExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)
